css/default.css
:root {
  --mainColor: #eaeaea;
  --secondaryColor: #fff;

  --borderColor: #c1c1c1;

  --mainText: black;
  --secondaryText: #4b5156;

  --themeDotBroder: #24292e;

  --previewBg: rgb(251, 249, 243, 0.8);
  --previewShadow: #f0ead6;

  --buttonColor: black;
}

html,
body {
  background-color: var(--mainColor);
  padding: 0;
  margin: 0;
}

body * {
  transition: 0.3s;
}

h1,
h2,
h3,
h4,
h5,
h6,
strong {
  color: var(--mainText);
  font-family: "Russo One", sans-serif;
  font-weight: 500;
}

p,
li,
span,
label,
input,
textarea {
  color: var(--secondaryText);
  font-family: "Roboto Mono", monospace;
}

h1 {
  font-size: 56px;
}
h2 {
  font-size: 36px;
}
h3 {
  font-size: 28px;
}
h4 {
  font-size: 24px;
}
h5 {
  font-size: 20px;
}
h6 {
  font-size: 16px;
}

a {
  text-decoration: none;
  color: #17a2b8;
}

ul {
  list-style: none;
}

.s1 {
  background-color: var(--mainColor);
  border-bottom: 1px solid var(--borderColor);
  overflow: auto;
}

.s2 {
  background-color: var(--secondaryColor);
  border-bottom: 1px sold var(--borderColor);
  overflow: auto;
}

.main-container {
  width: 1200px;
  margin: 0 auto;
}

.greeting-wrapper {
  display: grid;
  text-align: center;
  align-content: center;
  min-height: 10em;
}

.intro-wrapper {
  background-color: var(--secondaryColor);
  border: 1px solid var(--borderColor);
  border-radius: 5px 5px 0 0;

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);

  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "nav-wrapper nav-wrapper"
    "left-column right-column";
}

.nav-wrapper {
  grid-area: nav-wrapper;
  border-bottom: 1px solid var(--borderColor);
  border-radius: 5px 5px 0 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--mainColor);
}

#navigation a {
  color: var(--mainText);
}

#navigation {
  margin: 0;
  padding: 10px;
}

#navigation li {
  display: inline-block;
  margin-right: 10px;
  margin-left: 10px;
}

.dots-wrapper {
  display: flex;
  padding: 10px;
}

#dot-1 {
  background-color: #fc6058;
}

#dot-2 {
  background-color: #fec02f;
}

#dot-3 {
  background-color: #2aca3e;
}

.browser-dot {
  background-color: black;
  height: 15px;
  width: 15px;
  border-radius: 50%;
  margin: 5px;

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
}

.left-column {
  grid-area: left-column;
  padding-top: 50px;
  padding-bottom: 50px;
}

#profile_pic {
  display: block;
  margin: 0 auto;
  height: 300px;
  width: 250px;
  object-fit: cover;
  border: 2px solid var(--borderColor);
}

#theme-options-wrapper {
  display: flex;
  justify-content: center;
}

.theme-dot {
  height: 30px;
  width: 30px;
  background-color: black;
  border-radius: 50%;

  margin: 5px;
  border: 2px solid var(--themeDotBroder);

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);

  cursor: pointer;
}

.theme-dot:hover {
  border-width: 5px;
}

#light-mode {
  background-color: #fff;
}

#blue-mode {
  background-color: #2c445c;
}

#green-mode {
  background-color: #78866b;
}

#purple-mode {
  background-color: #4f2e5e;
}

#settings-note {
  font-size: 12px;
  font-style: italic;
  text-align: center;
}

.right-column {
  grid-area: right-column;
  display: grid;
  align-content: center;

  padding-top: 50px;
  padding-bottom: 50px;
}

#preview-shadow {
  background-color: var(--previewShadow);
  width: 300px;
  height: 180px;
  padding-left: 30px;
  padding-top: 30px;
}

#preview {
  width: 300px;
  border: 1.5px solid #17a2b8;
  background-color: var(--previewBg);
  padding: 15px;
  position: relative;
}

.corner {
  width: 7px;
  height: 7px;
  border-radius: 50%;
  border: 1.5px solid #17a2b8;
  background-color: #fff;
  position: absolute;
}

#corner-tl {
  top: -5px;
  left: -5px;
}

#corner-tr {
  top: -5px;
  right: -5px;
}

#corner-bl {
  bottom: -5px;
  left: -5px;
}

#corner-br {
  bottom: -5px;
  right: -5px;
}

.about-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  padding-bottom: 50px;
  padding-top: 50px;
  gap: 100px;
}

#skills {
  display: flex;
  justify-content: space-evenly;
  background-color: var(--previewShadow);
}

.social-links {
  display: grid;
  align-content: center;
  text-align: center;
}

#social_img {
  width: 100%;
}

.post-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, 320px);
  gap: 20px;
  justify-content: center;
  padding-bottom: 50px;
}

.post {
  border: 1px solid var(--borderColor);

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
}

.thumbnail {
  display: block;
  width: 100%;
  height: 180px;
  object-fit: cover;
}

.post-preview {
  background-color: #fff;
  padding: 15px;
}

.post-title {
  margin: 0;
  color: black;
}

.post-intro {
  color: #4b5156;
  font-size: 16px;
}

#contact-form {
  display: block;
  max-width: 600px;
  margin: 0 auto;
  border: 1px solid var(--borderColor);
  padding: 15px;
  border-radius: 5px;
  background-color: var(--mainColor);
  margin-bottom: 50px;
}

#contact-form label {
  line-height: 2.7em;
}

#contact-form textarea {
  min-height: 100px;
  font-size: 14px;
}

.input-field {
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: var(--secondaryColor);
  border-radius: 5px;
  border: 1px solid var(--borderColor);
  font-size: 14px;
}

#submit-btn {
  margin-top: 10px;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  color: #fff;
  background-color: var(--buttonColor);
  border: none;
}

.article-container {
  display: flex;
  flex-direction: column;
  background-color: var(--secondaryColor);
  padding: 0px 5vw;
}

.article-container .img-container {
  align-self: center;
  width: 30%;
}

.img-container img {
  border-radius: 50%;
  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
}

.article-container h2 {
  text-align: center;
}

@media screen and (max-width: 1200px) {
  .main-container {
    width: 95%;
  }
}

@media screen and (max-width: 800px) {
  .intro-wrapper {
    grid-template-columns: 1fr;
    grid-template-areas:
      "nav-wrapper"
      "left-column"
      "right-column";
  }
  .post {
    width: 100%;
  }
  .article-container .img-container {
    width: 50%;
  }
  .right-column {
    justify-content: center;
  }
  .article-container {
    padding: 0px 5vw;
  }
  .article-container h2 {
    text-align: center;
  }
}

